--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 body {
   margin: 0;
   padding: 0;
+  background: rgb(155, 170, 32);
+  background: linear-gradient(
+    90deg,
+    rgba(155, 170, 32, 1) 0%,
+    rgba(0, 116, 36, 1) 43%,
+    rgba(0, 255, 3, 1) 100%
+  );
 }
 
 .App {
+  color: white;
   text-align: center;
   margin: 50px auto 0;
   width: 90%;
@@ -11,7 +19,7 @@ body {
   border-radius: 20px;
   height: 470px;
   padding: 20px 15px;
-  background-color: rgb(0,255,166);
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
 }
 
 .search-engine {
@@ -66,14 +74,13 @@ body {
 .temp {
   font-size: 64px;
   font-weight: bold;
-  color: #000;
   text-align: center;
 }
 
 .description {
   font-size: 22px;
   font-weight: 500;
-  color: #000;
+  color: #000000b0;
   margin-top: 0;
   margin-bottom: 20px;
 }
