--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@ body {
   background: rgb(155, 170, 32);
   background: linear-gradient(
     90deg,
-    rgba(155, 170, 32, 1) 0%,
-    rgba(0, 116, 36, 1) 43%,
+    rgb(212, 236, 35) 0%,
+    rgb(3, 146, 48) 43%,
     rgba(0, 255, 3, 1) 100%
   );
 }
@@ -19,7 +19,7 @@ body {
   border-radius: 20px;
   height: 470px;
   padding: 20px 15px;
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, .5);
 }
 
 .search-engine {
